criando controller e codigo dos clientes
